prevent clipping of youtube thumbnails
the earlier setting of "overflow: hidden" to protect against extended ASCII
was also clipping our negative-margin images with youtube links.

setting "overflow-y: hidden" against all odds ended up clipping the horizontal
edges and also creating a horizontal scrollbar. ew.

using "overflow-y: clip" however magically works with the desired behavior.

--- a/pub/style.css
+++ b/pub/style.css
@@ -193,7 +193,7 @@ div.banned {
 }
 
 div.body {
-    overflow: hidden;
+    overflow-y: clip;
 }
 
 div.media {
